re PR middle-end/26807 (FAIL: gcc.dg/torture/pr24626-1.c  -O2  (test for excess errors))

2006-06-13  Maxim Kuvyrkov  <mkuvyrkov@ispras.ru>

	PR middle-end/26807
	* haifa-sched.c (check_cfg): Handle special case.

From-SVN: r114606